# bot-bakcend

./: .env  pyproject.toml
bot_backend/: main.py  zaingpt.txt
