[tool.poetry]
name = "bot-backend"
version = "0.1.0"
description = ""
authors = ["Badar Abbas <raibadar37218@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.13"
streamlit = "^1.41.1"
fastapi = "^0.115.6"
langchain = "^0.3.13"
faiss-cpu = "^1.9.0.post1"
langchain-core = "^0.3.28"
chroma = "^0.2.0"
chromadb = "^0.5.23"












[tool.poetry.scripts]
dev= "bot_backend.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
